<!--?xml version="1.0" encoding="UTF-8"?-->
<resources>
    <string name="app_name">Parking Manager</string>
    <string name="app_id">parking_manager</string>
    <string name="slogan">Hello world!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="card_number">Read your card</string>
    <string name="position">Choose a position</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="register_please">Don\'t have an account? Register</string>
    <string name="fogot_password">Forgot Password?</string>
    <string name="take_a_picture">TAKE A Picture</string>
    <string name="action_logout">Logout</string>
    <string name="action_user_management">User Manager</string>
    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_list_card">List Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_nfc_card">If your account has a card.\nJust tap it!</string>
    <string name="action_parking_management">Parking Manager</string>
    <string name="action_search_record">Search Record</string>

    action_list_card
</resources>