<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    User Manager-->
    <item
        android:id="@+id/action_user_management"
        android:icon="@drawable/ic_person"
        android:title="@string/action_user_management"
        app:showAsAction="never" />

<!--    Report-->
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_report_24"
        android:title="@string/action_report"
        app:showAsAction="collapseActionView" />

<!--    Settings-->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView" />

<!--    Logout-->
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>