<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_circle_blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_body"
    tools:context=".activities.user.LoginActivity">

    <!--    Login with username and password or scan nfc card-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_margin="0dp"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/logo_height"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:layout_margin="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:background="@drawable/txt_round"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_body" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:background="@drawable/txt_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_body" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_verticle"
            android:background="@drawable/btn_round"
            android:padding="@dimen/padding_textbox"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_verticle"
            android:gravity="center"
            android:text="@string/scan_nfc_card"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/text_size_body" />

    </LinearLayout>
</LinearLayout>