<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_circle_blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_body"
    tools:context=".activities.admin.UpdateMyInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/primaryColor"
            app:civ_border_width="@dimen/border_width" />

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_camera"
            android:contentDescription="@string/take_a_picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical"
        android:gravity="bottom">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:autofillHints="phone"
            android:background="@drawable/btn_round"
            android:hint="@string/name"
            android:inputType="text|textPersonName"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/text_size_body" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:autofillHints="phone"
            android:background="@drawable/btn_round"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/text_size_body" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:autofillHints="phone"
            android:background="@drawable/btn_round"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_body" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_body"
            android:autofillHints="password"
            android:background="@drawable/btn_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_textbox"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/text_size_body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticle">

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding_textbox"
                android:text="@string/save"
                android:textSize="@dimen/text_size_body" />

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding_textbox"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>